2002-01-17  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Version
	Bumped version to 0.3.5

	* Bug
	Small python bug fix by Samuel Listopad II

2002-01-13  Mads Bondo Dydensborg  <madsdyd@ripley>

	* mingw
	More mingw support from Samuel Listopad II

	* gcc3
	Tried to add gcc3 support, may or may not work.

2002-01-11  Mads Bondo Dydensborg  <madsdyd@ripley>

	* mingw
	minWG support have been added, thanks to Samuel Listopad II

2001-12-30  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Console
	Added a black background when console is down.

2001-12-22  Mads Bondo Dydensborg  <madsdyd@ripley>

	* TabCompletion
	Added tab completion code to the console.

2001-12-18  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Removing
	Removed a lot of files not used anymore. Version is 0.3.4 -
	tagging.

	* DrawText
	Removed all usage of the DrawText API. Bumped version number to
	0.3.3. Still needs to remove a number of files from the cvs.

	* Version
	Bumped the version number to 0.3.2.

	* Console
	Removed the old console code. Still uses the DT_DrawText stuff,
	but not for long. 7 files added. Console is not as functional as
	the old one, but a lot faster.

2001-12-22  Mads Bondo Dydensborg  <madsdyd@ripley>

	* TabCompletion
	Added tab completion code to the console.

2001-12-18  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Removing
	Removed a lot of files not used anymore. Version is 0.3.4 -
	tagging.

	* DrawText
	Removed all usage of the DrawText API. Bumped version number to
	0.3.3. Still needs to remove a number of files from the cvs.

	* Version
	Bumped the version number to 0.3.2.

	* Console
	Removed the old console code. Still uses the DT_DrawText stuff,
	but not for long. 7 files added. Console is not as functional as
	the old one, but a lot faster.

2001-12-09  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Tagging
	Tagging version 3.0.1 - bumping version number.

	* Togglecheat 
	Fixed to work again

	* TDelayBrick
	Is now removed correctly, which means the bonuslevel now