@@ -1,6 +1,6 @@
 SUBDIRS = src data
 
-EXTRA_DIST = bootstrap config doc CREDITS
+EXTRA_DIST = bootstrap config doc CREDITS yanoid.spec
 
 # Hook for making sure that we do not distribute CVS stuff
 dist-hook:
