@@ -11,7 +11,7 @@ dnl Setup initial stuff
 dnl ------------------------------------------------------------
 
 AC_INIT(src/main.cc)
-AM_INIT_AUTOMAKE(yanoid, "0.3.5")
+AM_INIT_AUTOMAKE(yanoid, "0.3.6")
 dnl Enable --maintainer-mode
 AM_MAINTAINER_MODE
 dnl Put config.h in src
@@ -272,4 +272,4 @@ CFLAGS="$YANOID_CFLAGS"
 CXXFLAGS="$YANOID_CXXFLAGS"
 LIBS="$YANOID_LIBS"
 
-AC_OUTPUT(src/Makefile data/Makefile data/graphics/Makefile data/graphics/fonts/Makefile data/graphics/objects/Makefile data/graphics/balls/Makefile data/graphics/paddles/Makefile data/graphics/bricks/Makefile data/graphics/powerups/Makefile data/graphics/shots/Makefile data/sounds/Makefile data/music/Makefile data/scripts/Makefile data/maps/Makefile data/objects/Makefile Makefile)
+AC_OUTPUT(src/Makefile data/Makefile data/graphics/Makefile data/graphics/fonts/Makefile data/graphics/objects/Makefile data/graphics/balls/Makefile data/graphics/paddles/Makefile data/graphics/bricks/Makefile data/graphics/powerups/Makefile data/graphics/shots/Makefile data/sounds/Makefile data/music/Makefile data/scripts/Makefile data/maps/Makefile data/objects/Makefile Makefile yanoid.spec)
